<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_desserts"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_choose_desserts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_dessert"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/teal_200"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/text_intro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/donut"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/donut"
        android:onClick="showDonutOrderMessage"
        app:layout_constraintTop_toBottomOf="@+id/text_choose_desserts"
        android:contentDescription="@string/donut_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/text_donut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/donut_description"
        android:textStyle="italic"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@+id/text_choose_desserts"
        app:layout_constraintLeft_toRightOf="@+id/donut"
        app:layout_constraintBottom_toBottomOf="@+id/donut"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/iceCream"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/icecream"
        android:onClick="showIceCreamOrderMessage"
        app:layout_constraintTop_toBottomOf="@+id/donut"
        android:contentDescription="@string/iceCream_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/text_iceCream"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/iceCream_description"
        android:textStyle="italic"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@+id/donut"
        app:layout_constraintLeft_toRightOf="@+id/iceCream"
        app:layout_constraintBottom_toBottomOf="@+id/iceCream"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/froyo"
        android:onClick="showFroyoOrderMessage"
        app:layout_constraintTop_toBottomOf="@+id/iceCream"
        android:contentDescription="@string/froyo_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/text_froyo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/froyo_description"
        android:textStyle="italic"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@+id/iceCream"
        app:layout_constraintLeft_toRightOf="@+id/froyo"
        app:layout_constraintBottom_toBottomOf="@+id/froyo"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>